--- a/index.css
+++ b/index.css
@@ -1,3 +1,23 @@
-#heading {
-    color:red;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 150px;
+}
+
+.nav-items{
+ font-size: 24px;
+}
+.nav-items>ul{
+    display: flex;
+    list-style-type: none;
+   
+}
+
+.nav-items>ul>li{
+    padding: 10px;
+    margin: 10px;
 }
