--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
 .nav-items{
  font-size: 24px;
 }
+
 .nav-items>ul{
     display: flex;
     list-style-type: none;
@@ -20,4 +21,31 @@
 .nav-items>ul>li{
     padding: 10px;
     margin: 10px;
+}
+.res-card{
+    padding: 10px;
+    margin: 5px;
+    width: 300px;
+    
+    border: 1px solid black;
+    background-color: #f0f0f0;
+}
+
+.res-logo{
+    width: 100%;
+    height: 100px;
+}
+
+.res-card :hover{
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.res-container{
+    display: flex;
+  flex-wrap: wrap;
+}
+
+.search{
+    padding: 5px;
 }
