--- a/index.css
+++ b/index.css
@@ -54,3 +54,18 @@
     margin: 10px;
     cursor: pointer ;
 }
+
+.shimmer-container{
+display: flex;
+}
+.shimmer-card{
+    margin: 20px;
+    width: 100px;
+    height: 200px;
+    background-color: #f0f0f0;
+}
+
+.login-button{
+    padding: 0 20px;
+    margin-right: 10px;
+}
