--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@
 }
 
 .filter-btn{
-    margin: 10px;
+  
     cursor: pointer ;
 }
 
@@ -68,4 +68,10 @@ display: flex;
 .login-button{
     padding: 0 20px;
     margin-right: 10px;
+    cursor: pointer;
+}
+
+.filter{
+    display: flex;
+    margin: 10px;
 }
